prusti-tests/tests/verify/fail/floats/nan-cmp-issues/nan_eq_nan_f64.rs
// ignore-test: link to the issue
fn main() {
    assert!(f64::NAN == f64::NAN); //~ ERROR: the asserted expression might not hold
    // assert!(f64::NAN != f64::NAN);
}